# zpool-auto-expand-partitions

./: Cargo.toml  LICENSE  README.md  flake.nix  shell.nix  test.nix
.github/workflows/: ci.yml  update-flake-lock.yml
src/: errors.rs  grow.rs  identify.rs  lsblk.rs  main.rs
